[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = "1.0.71"
arraygen = "0.3.2"
base64-url = "2.0.0"
bstr = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
cron = "0.12.0"
display_json = "0.2.1"
futures = "0.3.28"
handlebars = { version = "4.3.7", features = ["dir_source"] }
mongodb = { version = "2.5.0", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
rand = "0.8.5"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0.163"
serde_json = "1.0.96"
xsalsa20poly1305 = "0.9.1"
